kubernetes/apps/bases/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    name: jellyfin
spec:
  rules:
  - host: __PATCH__
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin
            port: 
              number: 8096
  tls:
  - hosts: []
    secretName: jellyfin-tls
